--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,12 @@ main {
   border: grey solid 3px;
 }
 
+@media only screen and (max-width: 660px){
+  .calulator-wrapper {
+    margin: 0 20% 0 20%;
+  }
+}
+
 .display-container {
   grid-area: display;
   display: grid;
@@ -82,9 +88,8 @@ main {
 
 .display {
   color: white;
-  font-size: 1em;
   text-align: right;
-  height: 1em;
+  height: 1.5em;
   box-sizing: border-box;
   width: 98%;
 }
