fixed a bug with zero getting entered twice on push

--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,10 @@ button:focus {
   background-color: tomato;
 }
 
+.zero:hover {
+  background-color: tomato;
+}
+
 .top:hover {
   background-color: tomato;
 }
