--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,10 @@ main {
     margin: 0 20% 0 20%;
   }
 
+  button {
+    font-size: 1.9em;
+  }
+
   button:hover {
     transform: scale(1);
     background-color: unset;
@@ -165,10 +169,14 @@ button {
   width: 100%;
   height: 100%;
   font-family: 'Bebas Neue', cursive;
-  font-size: 1.6em;
+  font-size: 2.5em;
   font-weight: 400;
   color: rgb(25, 68, 107, 0.85);
   background-color: skyblue;
+}
+
+.negative {
+  font-size: 1.9em;
 }
 
 button:focus {
